Fix overflowing image section1

--- a/style.css
+++ b/style.css
@@ -17,9 +17,6 @@ body {
     "Open Sans",
     "Helvetica Neue",
     sans-serif;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
 }
 
 ul {
